Fix image stretching by adding a css class for the loaded images.

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -3,8 +3,8 @@
 
 $primary: #6f42c1;
 $font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+"Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 $bs-gutter-x: 0;
 $bs-gutter-y: 0;
@@ -18,7 +18,8 @@ $bs-gutter-y: 0;
   margin-top: 3rem !important;
   // border-radius: 10px;
 }
-.image-frame1{
+
+.image-frame1 {
   height: 600px;
   width: 823px !important;
   border: 2px solid red;
@@ -34,44 +35,47 @@ $bs-gutter-y: 0;
   background-size: cover;
   background-position: center;
   // color: rgb(218, 204, 8);
-  color:red;
- 
- 
-  
+  color: red;
+
+
 }
+
 .top-row1 {
   height: 120px;
   background-image: url("./assets/img/top-row.png");
   background-size: cover;
   background-position: center;
   // color: rgb(218, 204, 8);
-  color:red;
-  border:1px solid white;
+  color: red;
+  border: 1px solid white;
   border-radius: 6px;
- 
-  .home-col1{
-    font-size:40px;
-    align-items: center;
-    padding-left:80px;
-    }
 
+  .home-col1 {
+    font-size: 40px;
+    align-items: center;
+    padding-left: 80px;
   }
-  .home-col2{
-    color:white;
-    font-size: 35px;
-   
-    
-  }
+
+}
+
+.home-col2 {
+  color: white;
+  font-size: 35px;
+
+
+}
+
 .top-row2 {
   height: 120px;
-  margin-top: 5px!important;
+  margin-top: 5px !important;
   background-size: cover;
   background-position: center;
   padding-top: 100px;
   padding-left: 110px;
-  
+
 }
-.home-buttons{
+
+.home-buttons {
   margin-left: -30px;
 }
 
@@ -98,9 +102,10 @@ $bs-gutter-y: 0;
   border-radius: 5px;
   border: 1px solid white;
 }
+
 .float-container {
   border: 3px solid yellow;
-  height:1500px;
+  height: 1500px;
 
 }
 
@@ -109,7 +114,7 @@ $bs-gutter-y: 0;
   float: left;
   padding: 20px;
   border: 2px solid yellow;
-  height:1000px;
+  height: 1000px;
 
 }
 
@@ -120,75 +125,84 @@ $bs-gutter-y: 0;
 }
 
 
-.img1 img{
+.img1 img {
   width: 100%;
   height: 100%;
 }
-.img1soldout{
+
+.img1soldout {
   @extend %inner-box-shared;
   //background-image: url("./assets/img/img1.jpg");
   height: 100px;
-  width:775px;
-  color:#800080;
+  width: 775px;
+  color: #800080;
   font-size: 30px;
-  border:2px solid yellow;
+  border: 2px solid yellow;
   background-image: linear-gradient(180deg, lightblue, red);
   font-family: 'Times New Roman', Times, serif;
   font-style: italic
 }
-.occasion{
+
+.occasion {
   @extend %inner-box-shared;
   //background-image: url("./assets/img/img1.jpg");
   height: 100px;
-  width:775px;
-  color:#800080;
+  width: 775px;
+  color: #800080;
   font-size: 30px;
-  border:2px solid yellow;
+  border: 2px solid yellow;
   background-image: linear-gradient(180deg, lightblue, red);
   font-family: 'Times New Roman', Times, serif;
   font-style: italic;
-  
+
 }
 
-
+.img-container {
+  object-fit: cover;
+}
 
 .img2 {
   @extend %inner-box-shared;
- // background-image: url("./assets/img/img2.jpg");
+  // background-image: url("./assets/img/img2.jpg");
   height: 180px;
 }
-.img2 img{
+
+.img2 img {
   width: 100%;
   height: 100%;
 }
 
 .img3 {
   @extend %inner-box-shared;
- // background-image: url("./assets/img/img3.jpg");
+  // background-image: url("./assets/img/img3.jpg");
   height: 290px;
 }
-.img3 img{
+
+.img3 img {
   width: 100%;
   height: 100%;
 }
+
 .img3soldout {
   @extend %inner-box-shared;
- // background-image: url("./assets/img/img3.jpg");
+  // background-image: url("./assets/img/img3.jpg");
   height: 365px;
-  width:775px;
+  width: 775px;
 }
-.img3soldout img{
+
+.img3soldout img {
   width: 100%;
   height: 100%;
 }
 
 .img4 {
   @extend %inner-box-shared;
- // background-image: url("./assets/img/img4.jpg");
+  // background-image: url("./assets/img/img4.jpg");
   height: 240px;
   margin-right: 10px !important;
 }
-.img4 img{
+
+.img4 img {
   width: 100%;
   height: 100%;
 }
@@ -209,16 +223,15 @@ $bs-gutter-y: 0;
   height: 180px !important;
   width: 800px;
   border-radius: 0 0 10px 10px;
- 
- 
-  }
-  .bottom1 {
-    height: 180px !important;
-    width: 825px;
-    border-radius: 0 0 10px 10px;
-    
-    margin-top: 195px!important;
-       }
+}
+
+.bottom1 {
+  height: 180px !important;
+  width: 825px;
+  border-radius: 0 0 10px 10px;
+
+  margin-top: 195px !important;
+}
 
 .brand {
   // background-color: yellow;
@@ -227,6 +240,7 @@ $bs-gutter-y: 0;
   top: 638px;
   left: 63px;
 }
+
 .brand1 {
   // background-color: yellow;
   position: absolute;
@@ -234,11 +248,12 @@ $bs-gutter-y: 0;
   top: 575px;
   margin-left: -11px !important;
 }
+
 .brand2 {
   // background-color: yellow;
   position: absolute;
   width: 820px !important;
-  top: 517px!important;
+  top: 517px !important;
   margin-left: -12px !important;
 }
 
@@ -246,14 +261,15 @@ $bs-gutter-y: 0;
 .item-box {
   border: 1px solid $primary;
 }
-.Text{
+
+.Text {
   margin-top: 2rem !important;
   margin-left: 280px;
   font-weight: bold;
   font-size: 20px;
 }
 
-.Image-Uplaod-Box{
+.Image-Uplaod-Box {
   height: 350px;
   width: 850px !important;
   border: 3px solid grey;
@@ -262,48 +278,57 @@ $bs-gutter-y: 0;
   margin-top: 1rem !important;
   border-radius: 10px;
 }
-.File-Input{
+
+.File-Input {
   margin-left: 20px;
   margin-top: 1rem;
 }
-.Text1{
+
+.Text1 {
   margin-left: 10px;
   font-weight: bold;
 }
-.Text2{
+
+.Text2 {
   margin-left: 30px;
   font-weight: bold;
 }
-.File-Input1{
+
+.File-Input1 {
   margin-left: 40px;
   margin-top: 3rem;
 }
 
 
-.Text2{
+.Text2 {
   margin-left: 10px;
   font-weight: bold;
   margin-top: -10px;
 }
-.File-Input1{
+
+.File-Input1 {
   margin-left: 20px;
 
 }
-.backtohome{
+
+.backtohome {
   margin-top: 20px;
   margin-left: 400px;
 }
-.occasion-right{
-  height:500px;
-  width:600px;
+
+.occasion-right {
+  height: 500px;
+  width: 600px;
   margin-left: 50px;
   margin-top: 75px;
-  border:2px solid grey;
+  border: 2px solid grey;
   border-radius: 5px;
 }
-.backtohome1{
+
+.backtohome1 {
   margin-top: 20px;
   margin-left: 260px;
 }
+
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
